Fix paragraph spacing on panels

--- a/src/sass/_componentlibrary.scss
+++ b/src/sass/_componentlibrary.scss
@@ -126,6 +126,16 @@
     margin-bottom: 0 !important;
 }
 
+.cl-panel p {
+    padding-top: 1rem !important;
+}
+
+.cl-panel p:first-of-type {
+    padding-top: 1.2rem !important;
+}
+
+
+
 
 /* Notices */
 
